--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -1013,26 +1013,26 @@ textarea.form-control {
   border-radius: 2px;
   text-transform: capitalize;
 }
-.btn {
-  display: inline-block;
-  margin-bottom: 0;
-  font-weight: 400;
-  text-align: center;
-  vertical-align: middle;
-  touch-action: manipulation;
-  cursor: pointer;
-  background-image: none;
-  border: 1px solid transparent;
-  white-space: nowrap;
-  padding: 5px 12px;
-  font-size: 13px;
-  line-height: 1.5;
-  border-radius: 3px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+// .btn {
+//   display: inline-block;
+//   margin-bottom: 0;
+//   font-weight: 400;
+//   text-align: center;
+//   vertical-align: middle;
+//   touch-action: manipulation;
+//   cursor: pointer;
+//   background-image: none;
+//   border: 1px solid transparent;
+//   white-space: nowrap;
+//   padding: 5px 12px;
+//   font-size: 13px;
+//   line-height: 1.5;
+//   border-radius: 3px;
+//   -webkit-user-select: none;
+//   -moz-user-select: none;
+//   -ms-user-select: none;
+//   user-select: none;
+// }
 .payroll-summary  .run .btn-payroll-run .details {
   padding: 5px 3px;
   font-size: .8vw;
