--- a/src/app/pages/selfdashboard/trafficChart/trafficChart.html
+++ b/src/app/pages/selfdashboard/trafficChart/trafficChart.html
@@ -1,5 +1,5 @@
 
-<div class="panel">
+<div class="panel pnl350">
   <div class="panel-heading">
     <div class="row">
       <div class="col-md-8">
