--- a/src/app/pages/directory/empdashboard/empdashboard.html
+++ b/src/app/pages/directory/empdashboard/empdashboard.html
@@ -177,15 +177,15 @@
 
     <div class="row">
         <div class="col-lg-4">
-            <div class="panel panel-medium"">
+            <div class="panel pnl300">
                 <div class="panel-heading header">
                     NEW JOINEES
-                    <a class="pull-right" data-ng-click="newListJoins()" href="">View All</a>
+                    <a ng-if="newJoins.length>0" class="pull-right" data-ng-click="newListJoins()" href="">View All</a>
                 </div>
                 <div class="panel-body">
-                    <table class="col-lg-12 custom-table table table-condensed">
+                    <table ng-if="newJoins.length>0" class="col-lg-12  table table-condensed">
                         <thead>
-                            <tr class="info">
+                            <tr>
                                 <td style="text-align: left">
                                     <label>Sr. No.</label>
                                 </td>
@@ -198,9 +198,9 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="new in newJoins">
-                                <td>{{new.SNo}}</td>
-                                <td>{{new.EmpName}}</td>
+                            <tr ng-repeat="new in newJoins | limitTo : 7">
+                                <td>{{$index+1}}</td>
+                                <td>{{new.EmpName| cut:true:16:' ...'}} </td>
                                 <td>{{new.JDDate}}</td>
                             </tr>
                         </tbody>
@@ -210,15 +210,15 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <div class="panel">
+            <div class="panel pnl300">
                 <div class="panel-heading header">
                     BIRTHDAYS / ANNIVERSARIES
-                    <a class="pull-right" data-ng-click="birthDay()" href="">View All</a>
+                    <a ng-if="birthAnnList.length>0" class="pull-right" data-ng-click="birthDay()" href="">View All</a>
                 </div>
                 <div class="panel-body">
-                    <table class="col-lg-12 custom-table table table-condensed">
+                    <table ng-if="birthAnnList.length>0" class="col-lg-12  table table-condensed">
                         <thead>
-                            <tr class="info">
+                            <tr>
                                 <td style="text-align: left">
                                     <label>Sr. No.</label>
                                 </td>
@@ -231,9 +231,10 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="birthAnn in birthAnnList">
-                                <td>{{birthAnn.SNo}}</td>
-                                <td>{{birthAnn.EmpName}}</td>
+                            <tr ng-repeat="birthAnn in birthAnnList | limitTo : 7">
+                                <td>{{$index}}</td>
+                                <td>{{birthAnn.EmpName| cut:true:16:' ...'}} </td>
+                                </td>
                                 <td>{{birthAnn.PdDateOfBirth}}</td>
                             </tr>
                         </tbody>
@@ -243,15 +244,15 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <div class="panel">
+            <div class="panel pnl300">
                 <div class="panel-heading header">
                     LEAVING EMPLOYEES
-                    <a class="pull-right" data-ng-click="hasLeft()" href="">View All</a>
+                    <a ng-if="newJoins.length>0" class="pull-right" data-ng-click="hasLeft()" href="">View All</a>
                 </div>
                 <div class="panel-body">
-                    <table class="col-lg-12 custom-table table table-condensed">
+                    <table class="col-lg-12  table table-condensed">
                         <thead>
-                            <tr class="info">
+                            <tr class="">
                                 <td style="text-align: left">
                                     <label>Sr. No.</label>
                                 </td>
@@ -264,9 +265,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="emp in leavingEmps">
-                                <td>{{emp.SNo}}</td>
-                                <td>{{emp.EmpName}}</td>
+                            <tr ng-repeat="emp in leavingEmps | limitTo : 7">
+                                <td> {{$index+1}}</td>
+                                <!-- <td>{{emp.EmpName | limitTo : 10}}
+                                    <span ng-if="emp.EmpName.length > 10">...</span>
+                                </td> -->
+                                <td>{{emp.EmpName | cut:true:16:' ...'}} </td>
                                 <td>{{emp.RDRelievingDate}}</td>
                             </tr>
                         </tbody>
