--- a/src/app/pages/selfdashboard/dashboard.html
+++ b/src/app/pages/selfdashboard/dashboard.html
@@ -176,7 +176,7 @@
     </div> -->
 </div>
 
-<div class="row">
+<div class="row shift-up">
     <div class="col-md-4">
         <div class="panel pnl300">
             <div class="panel-heading header">
@@ -258,17 +258,24 @@
         </div>
     </div>
 
-    <div class="col-md-4">
-        <div class="panel pnl300">
+    <div class="col-md-4 pnl300">
+
+            <div class="pnl300" ba-panel ba-panel-title="To Do List" ba-panel-class="medium-panel feed-comply-panel with-scroll todo-panel">
+                <dashboard-todo></dashboard-todo>
+            </div>
+
+
+
+        <!-- <div class="panel pnl300">
             <div class="panel-heading header">
                 Acquisition Channels
             </div>
 
             <div class="panel-body">
 
-
+                    <dashboard-todo></dashboard-todo>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- <div class="col-lg-4 col-md-12 col-sm-12" ba-panel ba-panel-title="Acquisition Channels" ba-panel-class="medium-panel traffic-panel">
