--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -260,6 +260,7 @@ input:focus, select:foucs {
     // padding-top: 8px;
 }
 
+
 .filters li{
   padding-bottom: 15px;
 }
@@ -318,6 +319,11 @@ input:focus, select:foucs {
   width: 100%;
 }
 
+.iconsize{
+  font-size:18px;
+  color:#2153a5;
+}
+
 .pnl100{
   height: 200px;
 }
@@ -328,7 +334,7 @@ input:focus, select:foucs {
   height: 300px;
 }
 .pnl350{
-  height: 415px;
+  height: 450px;
 }
 .pnl400{
   height: 400px;
